[gd_scene load_steps=2 format=3 uid="uid://d17buy7u68rvx"]

[ext_resource type="Script" path="res://Scripts/MainsST/count_scene.gd" id="1_vqmxk"]

[node name="Count" type="Node"]
script = ExtResource("1_vqmxk")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="UI"]
offset_left = -639.0
offset_top = -138.0
offset_right = 1933.0
offset_bottom = 784.0
color = Color(0.00646313, 0, 0.150661, 1)

[node name="PJ1" type="Label" parent="UI"]
offset_left = 445.0
offset_top = 42.0
offset_right = 697.0
offset_bottom = 65.0
text = "Nombre de jugador 1"
horizontal_alignment = 1

[node name="Error" type="Label" parent="UI"]
offset_left = 468.0
offset_top = 117.0
offset_right = 720.0
offset_bottom = 140.0
theme_override_colors/font_color = Color(0.808137, 3.27289e-06, 7.70092e-07, 1)
text = "\"Pon un nombre para tu cuenta\""

[node name="Nombre_PJ_1" type="LineEdit" parent="UI"]
offset_left = 353.0
offset_top = 68.0
offset_right = 1853.0
offset_bottom = 213.0
scale = Vector2(0.3, 0.3)
theme_override_font_sizes/font_size = 100
placeholder_text = "What You Name?"
alignment = 1

[node name="PJ2" type="Label" parent="UI"]
offset_left = 445.0
offset_top = 147.0
offset_right = 697.0
offset_bottom = 170.0
text = "Nombre de jugador 2
"
horizontal_alignment = 1

[node name="Error2" type="Label" parent="UI"]
offset_left = 468.0
offset_top = 215.0
offset_right = 720.0
offset_bottom = 238.0
theme_override_colors/font_color = Color(0.808137, 3.27289e-06, 7.70092e-07, 1)
text = "\"Pon un nombre para tu cuenta\""

[node name="Nombre_PJ_2" type="LineEdit" parent="UI"]
offset_left = 353.0
offset_top = 173.0
offset_right = 1853.0
offset_bottom = 318.0
scale = Vector2(0.3, 0.3)
theme_override_font_sizes/font_size = 100
placeholder_text = "What You Name?"
alignment = 1

[node name="CreateEdit" type="Button" parent="UI"]
offset_left = 468.0
offset_top = 441.0
offset_right = 886.0
offset_bottom = 537.0
scale = Vector2(0.595, 0.595)
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 64
text = "Create Account"

[connection signal="pressed" from="UI/CreateEdit" to="." method="_on_create_edit_pressed"]
